--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Get your Google Gemini API Key here https://cloud.google.com/vertex-ai
-GOOGLE_GENERATIVE_AI_API_KEY=****
+# Get your OpenRouter API Key here https://openrouter.ai/keys
+OPENROUTER_API_KEY=****
 
 # Generate a random secret: https://generate-secret.vercel.app/32 or `openssl rand -base64 32`
 AUTH_SECRET=****
